<resources>
    <string name="app_name">Shoes Tap</string>

    <!--Strings Primer Fragmento-->
    <string name="zapatos">ZAPATOS</string>
    <string name="shoes_tap">Shoes Tap</string>

    <!--Strings Segundo Fragmento-->
    <string name="tallas">TALLAS</string>
    <string name="_36">36</string>
    <string name="_37">37</string>
    <string name="_38">38</string>
    <string name="_39">39</string>
    <string name="_40">40</string>
    <string name="guardar_en_el_carrito">AÑADIR AL CARRITO</string>

    <!--Strings Tercer Fragmento-->
    <string name="mi_carrito">MI CARRITO</string>

</resources>